Committing the changes

--- a/force-app/main/default/classes/getAccountsList.cls
+++ b/force-app/main/default/classes/getAccountsList.cls
@@ -1,10 +1,8 @@
 public with sharing class getAccountsList {
     @AuraEnabled(cacheable=true)
-    public static List<Account> getAccountByEmployee(Integer numberOfEmployee) {
+    public static List<Account> getAccountsByEmployeeNumber(Integer numberOfEmployees) {
             return [
-                SELECT Name 
-                FROM Account
-                WHERE numberofemployee__c >= :numberOfEmployee
+                SELECT Name FROM Account WHERE numberofemployee__c >= :numberOfEmployees
             ];
     }
 }
